--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@fontsource/roboto-mono": "^4.5.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -54,7 +55,6 @@
     "fontsource-roboto": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-region-select": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.1.1"
   },
